--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -15,6 +15,7 @@
               <thead>
                 <tr>
                   <th>Title</th>
+                  <th class="text-center">Description</th>
                   <th class="text-center">Price</th>
                   <th class="text-center">Author</th>
                   <th class="text-center">Genre</th>
@@ -27,6 +28,7 @@
                 <% for (let count = 0; count < books.length; count++) { %>
                 <tr>
                   <td><%= books[count].Title %></td>
+                  <td class="text-center"><%= books[count].Description %></td>
                   <td class="text-center">$<%= books[count].Price %></td>
                   <td class="text-center"><%= books[count].Author %></td>
                   <td class="text-center"><%= books[count].Genre %></td>
@@ -35,15 +37,15 @@
                     <!-- ------------------------ -->
                     <!-- ADD the EDIT BUTTON HERE -->
                     <!-- ------------------------ -->
-                    <a href="/books/edit/<%= books[count]._id %>" class="btn btn-primary btn-sm">
-                      <i class="fas fa-pencil-alt"></i> Edit</a>                  
-                    </td>
+                    <a href="/books/<%= books[count]._id %>" class="btn btn-primary btn-sm">
+                      <i class="fas fa-pencil-alt"></i> Edit</a>
+                  </td>
 
                   <td class="text-center">
                     <!-- ------------------------ -->
                     <!-- ADD the DELETE BUTTON HERE -->
                     <!-- ------------------------ -->
-                    <a href="/books/edit/<%= books[count]._id %>" class="btn btn-danger btn-sm">
+                    <a href="/books/delete/<%= books[count]._id %>" class="btn btn-danger btn-sm">
                       <i class="fas fa-trash-alt"></i> Delete</a>
                   </td>
                 </tr>
