--- a/client/Content/app.css
+++ b/client/Content/app.css
@@ -1,3 +1,13 @@
+/* 
+Student Name: Andre Henrique Moyses de Assis
+Student number: 301282773
+Curse Name: Web Application Development
+Curse Code:COMP229
+Assignment: Mid-Term Test
+File: app.css
+Date: 2023-06-23
+*/
+
 /* Custom CSS goes here */
 body {
   padding-bottom: 70px;
