--- a/server/views/error.ejs
+++ b/server/views/error.ejs
@@ -1,3 +1,13 @@
+<!-- 
+Student Name: Andre Henrique Moyses de Assis
+Student number: 301282773
+Curse Name: Web Application Development
+Curse Code:COMP229
+Assignment: Mid-Term Test
+File: error.ejs
+Date: 2023-06-23
+-->
+
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
 <pre><%= error.stack %></pre>
