--- a/server/views/errors/500.ejs
+++ b/server/views/errors/500.ejs
@@ -1,3 +1,13 @@
+<!-- 
+Student Name: Andre Henrique Moyses de Assis
+Student number: 301282773
+Curse Name: Web Application Development
+Curse Code:COMP229
+Assignment: Mid-Term Test
+File: 500.ejs
+Date: 2023-06-23
+-->
+
 <% include ../partials/header.ejs %>
 
     <!-- MAIN CONTENT -->
