--- a/server/views/partials/footer.ejs
+++ b/server/views/partials/footer.ejs
@@ -1,3 +1,13 @@
+<!-- 
+Student Name: Andre Henrique Moyses de Assis
+Student number: 301282773
+Curse Name: Web Application Development
+Curse Code:COMP229
+Assignment: Mid-Term Test
+File: footer.ejs
+Date: 2023-06-23
+-->
+
 
 <nav class="navbar navbar-inverse navbar-fixed-bottom">
   <div class="container">
