--- a/server/views/content/index.ejs
+++ b/server/views/content/index.ejs
@@ -17,6 +17,12 @@ Date: 2023-06-23
         <div class="col-md-offset-3 col-md-6">
           <h1><%= title %></h1>
             <h2>Welcome to <%= title %></h2>
+            <h2>Student Name: Andre Henrique Moyses de Assis
+              Student number: 301282773
+              Curse Name: Web Application Development
+              Curse Code:COMP229
+              Assignment: Mid-Term Test
+              Date: 2023-06-23</h2>
         </div>
       </div>
     </div>
