--- a/server/views/content/index.ejs
+++ b/server/views/content/index.ejs
@@ -15,14 +15,14 @@ Date: 2023-06-23
     <div class="container">
       <div class="row">
         <div class="col-md-offset-3 col-md-6">
-          <h1><%= title %></h1>
-            <h2>Welcome to <%= title %></h2>
-            <h2>Student Name: Andre Henrique Moyses de Assis
-              Student number: 301282773
-              Curse Name: Web Application Development
-              Curse Code:COMP229
-              Assignment: Mid-Term Test
-              Date: 2023-06-23</h2>
+          <h1><%= title %> - MidTerm</h1>
+            <h2>Welcome to <%= title %></h2><br>
+            <h3><strong>Student Name:</strong><p>Andre Henrique Moyses de Assis</p>
+              <strong>Student Number:</strong><p>301282773</p>
+              <strong>Curse Name:</strong><p>Web Application Development</p>
+              <strong>Curse Code:</strong><p>COMP229</p>
+              <strong>Assignment:</strong><p>MidTerm Test</p>
+              <strong>Date:</strong><p>2023-06-23</p></h3>
         </div>
       </div>
     </div>
