--- a/server/views/content/index.ejs
+++ b/server/views/content/index.ejs
@@ -17,15 +17,23 @@ Date: 2023-06-23
         <div class="col-md-offset-3 col-md-6">
           <h1><%= title %> - MidTerm</h1>
             <h2>Welcome to <%= title %></h2><br>
-            <h3><strong>Student Name:</strong><p>Andre Henrique Moyses de Assis</p>
-              <strong>Student Number:</strong><p>301282773</p>
-              <strong>Curse Name:</strong><p>Web Application Development</p>
-              <strong>Curse Code:</strong><p>COMP229</p>
-              <strong>Assignment:</strong><p>MidTerm Test</p>
-              <strong>Date:</strong><p>2023-06-23</p></h3>
         </div>
       </div>
-    </div>
+      <div class="aboutrow">
+        <div class="aboutcolumn1">
+          <div>
+            <img src="/Assets/images/andreassis.jpg" width="180px" height="250px" alt="">
+          </div>
+        </div>
+        <div class="aboutcolumn2">
+          <h3><strong>Student Name:</strong><p>Andre Henrique Moyses de Assis</p>
+            <strong>Student Number:</strong><p>301282773</p>
+            <strong>Curse Name:</strong><p>Web Application Development</p>
+            <strong>Curse Code:</strong><p>COMP229</p>
+            <strong>Assignment:</strong><p>MidTerm Test</p>
+            <strong>Date:</strong><p>2023-06-23</p></h3>
+        </div>
+      </div>
 
 <% include ../partials/footer.ejs %>
 
