home page changes

--- a/server/views/content/index.ejs
+++ b/server/views/content/index.ejs
@@ -15,7 +15,7 @@ Date: 2023-06-23
     <div class="container">
       <div class="row">
         <div class="col-md-offset-3 col-md-6">
-          <h1><%= title %> - MidTerm</h1>
+          <h1><strong><%= title %> - MidTerm</strong></h1>
             <h2>Welcome to <%= title %></h2><br>
         </div>
       </div>
